--- a/_sass/page-about.scss
+++ b/_sass/page-about.scss
@@ -77,6 +77,8 @@
           justify-content: center;
           img {
             max-width: 25vw;
+            box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+            border-radius: 50%;
           }
         }
 
